Fixing style add to FF button on small screens on versions page

--- a/src/amo/components/AddonVersionCard/styles.scss
+++ b/src/amo/components/AddonVersionCard/styles.scss
@@ -10,6 +10,12 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .Button{
+  width: 100%;
+  }
+}
+
 .AddonVersionCard-header {
   @include font-regular();
   @include text-align-start();
